Cleanup of tests in the drools scenario simulation package (#5205)