@@ -16,7 +16,6 @@
 
 package org.drools.scenariosimulation.backend.fluent;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -39,7 +38,6 @@ import org.mockito.Mock;
 import org.mockito.junit.MockitoJUnitRunner;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.fail;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.times;
@@ -62,62 +60,74 @@ public class RuleStatelessScenarioExecutableBuilderTest {
     public void testBuilder() {
         when(kieContainerMock.newStatelessKieSession(anyString())).thenReturn(statelessKieSessionMock);
         when(statelessKieSessionMock.getKieBase()).thenReturn(kieBaseMock);
-        when(kieBaseMock.getKiePackages()).thenReturn(Collections.emptyList());
+        when(kieBaseMock.getKiePackages()).thenReturn(List.of());
         String sessionName = "sessionName";
         RuleStatelessScenarioExecutableBuilder builder = new RuleStatelessScenarioExecutableBuilder(kieContainerMock, sessionName);
 
         Map<String, Object> result = builder.run();
+
         verify(kieContainerMock, times(1)).newStatelessKieSession(eq(sessionName));
-        assertThat(result.containsKey(RuleScenarioExecutableBuilder.COVERAGE_LISTENER)).isTrue();
-        assertThat(result.containsKey(RuleScenarioExecutableBuilder.RULES_AVAILABLE)).isTrue();
+        assertThat(result).containsKeys(RuleScenarioExecutableBuilder.COVERAGE_LISTENER, RuleScenarioExecutableBuilder.RULES_AVAILABLE);
     }
 
     @Test
-    public void generateCommands() {
-        FactMappingValue emptyFMV = new FactMappingValue(FactIdentifier.EMPTY, ExpressionIdentifier.DESCRIPTION, null);
-
+    public void generateCommands_twoCommands() {
         RuleStatelessScenarioExecutableBuilder builder = new RuleStatelessScenarioExecutableBuilder(null, null);
 
         Command<ExecutionResults> batchCommand = builder.generateCommands(null);
-        assertThat(verifyCommand(batchCommand, AddCoverageListenerCommand.class)).isTrue();
-        assertThat(verifyCommand(batchCommand, FireAllRulesCommand.class)).isTrue();
-        assertThat(verifyCommand(batchCommand, AgendaGroupSetFocusCommand.class)).isFalse();
-        assertThat(verifyCommand(batchCommand, InsertElementsCommand.class)).isFalse();
-        assertThat(verifyCommand(batchCommand, ValidateFactCommand.class)).isFalse();
-
-        builder.setActiveAgendaGroup("test");
-        batchCommand = builder.generateCommands(null);
-
-        assertThat(verifyCommand(batchCommand, AddCoverageListenerCommand.class)).isTrue();
-        assertThat(verifyCommand(batchCommand, FireAllRulesCommand.class)).isTrue();
-        assertThat(verifyCommand(batchCommand, AgendaGroupSetFocusCommand.class)).isTrue();
-        assertThat(verifyCommand(batchCommand, InsertElementsCommand.class)).isFalse();
-        assertThat(verifyCommand(batchCommand, ValidateFactCommand.class)).isFalse();
-
-        builder.insert(new Object());
-        batchCommand = builder.generateCommands(null);
-        assertThat(verifyCommand(batchCommand, AddCoverageListenerCommand.class)).isTrue();
-        assertThat(verifyCommand(batchCommand, FireAllRulesCommand.class)).isTrue();
-        assertThat(verifyCommand(batchCommand, AgendaGroupSetFocusCommand.class)).isTrue();
-        assertThat(verifyCommand(batchCommand, InsertElementsCommand.class)).isTrue();
-        assertThat(verifyCommand(batchCommand, ValidateFactCommand.class)).isFalse();
-
-        builder.addInternalCondition(String.class, obj -> null, new ScenarioResult(emptyFMV, null));
-        batchCommand = builder.generateCommands(null);
-        assertThat(verifyCommand(batchCommand, AddCoverageListenerCommand.class)).isTrue();
-        assertThat(verifyCommand(batchCommand, FireAllRulesCommand.class)).isTrue();
-        assertThat(verifyCommand(batchCommand, AgendaGroupSetFocusCommand.class)).isTrue();
-        assertThat(verifyCommand(batchCommand, InsertElementsCommand.class)).isTrue();
-        assertThat(verifyCommand(batchCommand, ValidateFactCommand.class)).isTrue();
+        
+        assertThat(((Batch) batchCommand).getCommands()).hasSize(2);
+        assertThat(((Batch) batchCommand).getCommands().get(0)).isInstanceOf(AddCoverageListenerCommand.class);
+        assertThat(((Batch) batchCommand).getCommands().get(1)).isInstanceOf(FireAllRulesCommand.class);
+        
     }
 
-    private boolean verifyCommand(Command<ExecutionResults> batchCommand, Class<?> classToFind) {
-        if (!(batchCommand instanceof Batch)) {
-            fail("Unexpected execution path");
-        }
+    @Test
+    public void generateCommands_threeCommands() {
+        RuleStatelessScenarioExecutableBuilder builder = new RuleStatelessScenarioExecutableBuilder(null, null);
+        builder.setActiveAgendaGroup("test");
 
-        List<Command> commands = ((Batch) batchCommand).getCommands();
+        Command<ExecutionResults> batchCommand = builder.generateCommands(null);
+        
+        assertThat(((Batch) batchCommand).getCommands()).hasSize(3);
+        assertThat(((Batch) batchCommand).getCommands().get(0)).isInstanceOf(AddCoverageListenerCommand.class);
+        assertThat(((Batch) batchCommand).getCommands().get(1)).isInstanceOf(AgendaGroupSetFocusCommand.class);
+        assertThat(((Batch) batchCommand).getCommands().get(2)).isInstanceOf(FireAllRulesCommand.class);
+        
+    }
 
-        return commands.stream().anyMatch(classToFind::isInstance);
+    @Test
+    public void generateCommands_fourCommands() {
+        RuleStatelessScenarioExecutableBuilder builder = new RuleStatelessScenarioExecutableBuilder(null, null);
+        builder.setActiveAgendaGroup("test");
+        builder.insert(new Object());
+
+        Command<ExecutionResults> batchCommand = builder.generateCommands(null);
+        
+        assertThat(((Batch) batchCommand).getCommands()).hasSize(4);
+        assertThat(((Batch) batchCommand).getCommands().get(0)).isInstanceOf(AddCoverageListenerCommand.class);
+        assertThat(((Batch) batchCommand).getCommands().get(1)).isInstanceOf(AgendaGroupSetFocusCommand.class);
+        assertThat(((Batch) batchCommand).getCommands().get(2)).isInstanceOf(InsertElementsCommand.class);
+        assertThat(((Batch) batchCommand).getCommands().get(3)).isInstanceOf(FireAllRulesCommand.class);
+        
+    }
+    
+    
+    @Test
+    public void generateCommands_fiveCommands() {
+        RuleStatelessScenarioExecutableBuilder builder = new RuleStatelessScenarioExecutableBuilder(null, null);
+        builder.setActiveAgendaGroup("test");
+        builder.insert(new Object());
+        FactMappingValue emptyFMV = new FactMappingValue(FactIdentifier.EMPTY, ExpressionIdentifier.DESCRIPTION, null);
+        builder.addInternalCondition(String.class, obj -> null, new ScenarioResult(emptyFMV, null));
+
+        Command<ExecutionResults> batchCommand = builder.generateCommands(null);
+
+        assertThat(((Batch) batchCommand).getCommands()).hasSize(5);
+        assertThat(((Batch) batchCommand).getCommands().get(0)).isInstanceOf(AddCoverageListenerCommand.class);
+        assertThat(((Batch) batchCommand).getCommands().get(1)).isInstanceOf(AgendaGroupSetFocusCommand.class);
+        assertThat(((Batch) batchCommand).getCommands().get(2)).isInstanceOf(InsertElementsCommand.class);
+        assertThat(((Batch) batchCommand).getCommands().get(3)).isInstanceOf(FireAllRulesCommand.class);
+        assertThat(((Batch) batchCommand).getCommands().get(4)).isInstanceOf(ValidateFactCommand.class);
     }
 }
